hphp/test/quick/nested_vm_exceptions2.php.expectf
Error handler
We hit our handler.

Fatal error: Uncaught exception 'Exception' with message 'Sup' in %s/test/quick/nested_vm_exceptions2.php:26
Stack trace:
#0 {main}
